--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	
+	<header></header>
+	<main></main>
+	<footer></footer>
 </body>
+<script src="script.js"></script>
 </html>
