--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<header></header>
-	<main></main>
+	<header>
+		<div id="logo"></div>
+		<nav id="main-menu"></nav>
+	</header>
+	<main>
+		
+	</main>
 	<footer></footer>
 </body>
 <script src="script.js"></script>
