--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
 </head>
 <body>
 	<header>
-		<div id="logo"></div>
-		<nav id="main-menu"></nav>
+		<div id="logo">LOGO</div>
+		<nav id="main-menu">
+			<ul>
+				<li><a href="index.html">Accueil</a></li>
+				<li><a href="#">L'association</a></li>
+				<li><a href="#">Les donateurs</a></li>
+				<button class="btn-donate"><a href="#">Faites un don</a></button
+			</ul>
+		</nav>
 	</header>
 	<main>
 		
