--- a/index.html
+++ b/index.html
@@ -2,25 +2,48 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
 	<title>HOME</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<header>
-		<div id="logo">LOGO</div>
-		<nav id="main-menu">
+	<div id="container">
+		<header id="header-desktop">
+			<div class="logo">LOGO</div>
+			<nav id="main-menu">
+				<ul>
+					<li><a href="index.html">Accueil</a></li>
+					<li><a href="#">L'association</a></li>
+					<li><a href="#">Les donateurs</a></li>
+					<button class="btn-donate"><a href="#">Faites un don</a></button>
+				</ul>
+			</nav>
+		</header>
+		<header id="header-mobile">
+			<div id="hamburger">
+				<div></div>
+				<div></div>
+				<div></div>
+			</div>
+			<div class="logo">LOGO</div>
+			
+		</header>
+		<nav id="mobile-main-menu">
+			<div id="close-mobile-menu">XXXXXXX</div>
 			<ul>
 				<li><a href="index.html">Accueil</a></li>
 				<li><a href="#">L'association</a></li>
 				<li><a href="#">Les donateurs</a></li>
-				<button class="btn-donate"><a href="#">Faites un don</a></button
-			</ul>
+				<button class="btn-donate"><a href="#">Faites un don</a></button>
+				</ul>
 		</nav>
-	</header>
-	<main>
-		
-	</main>
-	<footer></footer>
+
+		<main class="container">
+			
+		</main>
+		<footer></footer>
+	</div>
 </body>
-<script src="script.js"></script>
+<script src="jquery-2.2.0.min.js" type="text/javascript"></script>
+<script src="script.js" type="text/javascript"></script>
 </html>
