--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 		<nav id="main-menu"></nav>
 	</header>
 	<main>
-		
+		<div id="title">Après chaque étape, le donateur le plus généreux sera remercier et mis en avant pendant la course. </div>
+		<div id="subtitle">Pauline et Margaux vous partage leur expérience de cette aventure extraordinaire. </br>
+			Vous aussi faites un geste pour l’association et nous vous remercierons comme il se doit !</div>
 	</main>
 	<footer></footer>
 </body>
