--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
 		<main class="container">
 			
 		</main>
-		<footer></footer>
+		<footer>
+			<div>
+				<h3>Mentions Légales</h3>
+			</div>
+		</footer>
 	</div>
 </body>
 <script src="jquery-2.2.0.min.js" type="text/javascript"></script>
