--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			
 		</header>
 		<nav id="mobile-main-menu">
-			<div id="close-mobile-menu">XXXXXXX</div>
+			<div id="close-mobile-menu">X</div>
 			<ul>
 				<li><a href="index.html">Accueil</a></li>
 				<li><a href="#">L'association</a></li>
