--- a/etape.html
+++ b/etape.html
@@ -40,11 +40,37 @@
 
 		<main id="etape" class="container">
 			<article>
-				<div class="img-etape"></div>
+				<div class="img-etape" style="background:url(assets/images/photo.jpg) no-repeat center"></div>
+				<h1>Un grand merci à Patrick</h1>
+				<p>Non ergo erunt homines deliciis diffluentes audiendi, si quando de amicitia, quam nec usu nec ratione habent cognitam, disputabunt. Nam quis est, pro deorum fidem atque hominum! qui velit, ut neque diligat quemquam nec ipse ab ullo diligatur, circumfluere omnibus copiis atque in omnium rerum abundantia vivere? Haec enim est tyrannorum vita nimirum, in qua nulla fides, nulla caritas, nulla stabilis benevolentiae potest esse fiducia, omnia semper suspecta atque sollicita, nullus locus amicitiae.
+
+In his tractibus navigerum nusquam visitur flumen sed in locis plurimis aquae suapte natura calentes emergunt ad usus aptae multiplicium medelarum. verum has quoque regiones pari sorte Pompeius Iudaeis domitis et Hierosolymis captis in provinciae speciem delata iuris dictione formavit.
+				</p>
+				<nav class="etape-contributors">
+					<ul>
+						<li>Michel</li>
+						<li>Jean</li>
+						<li>Jacques</li>
+						<li>Michel</li>
+						<li>Jean</li>
+						<li>Jacques</li>
+					</ul>
+				</nav>
 			</article>
 			<aside>
-				
+				<h2>Etape 1</h2>
+				<div class="trait">
+					<img src="assets/icons/line.svg" alt="line">
+				</div>
+				<div class="cross">
+					<img src="assets/icons/cross.svg" alt="cross">
+				</div>
 			</aside>
+			<div class="etape-next">
+				<div class="btn-etape-next">
+					<button></button>
+				</div>
+			</div>
 		</main>
 		<footer>
 			<div>
