--- a/etape.html
+++ b/etape.html
@@ -74,7 +74,7 @@ In his tractibus navigerum nusquam visitur flumen sed in locis plurimis aquae su
 		</main>
 		<footer>
 			<div>
-				<h3>Mentions Légales</h3>
+				<h3><a href="#">Mentions Légales</a></h3>
 			</div>
 		</footer>
 	</div>
