--- a/association.html
+++ b/association.html
@@ -60,7 +60,7 @@
 		</main>
 		<footer>
 			<div>
-				<h3>Mentions Légales</h3>
+				<h3><a href="#">Mentions Légales</a></h3>
 			</div>
 		</footer>
 	</div>
