--- a/mentionslegales.html
+++ b/mentionslegales.html
@@ -55,7 +55,7 @@
 		</main>
 		<footer>
 			<div>
-				<h3>Mentions Légales</h3>
+				<h3><a href="#">Mentions Légales</a></h3>
 			</div>
 		</footer>
 	</div>
