--- a/index.html
+++ b/index.html
@@ -38,10 +38,21 @@
 				</ul>
 		</nav>
 
-		<main class="container">
-			<div id="title">Après chaque étape, le donateur le plus généreux sera remercier et mis en avant pendant la course. </div>
-			<div id="subtitle">Pauline et Margaux vous partage leur expérience de cette aventure extraordinaire. </br>
-				Vous aussi faites un geste pour l’association et nous vous remercierons comme il se doit !</div>
+		<main>
+			<div class="container">
+				<div id="title">Après chaque étape, le donateur le plus généreux sera remercier et mis en avant pendant la course. </div>
+				<div id="subtitle">Pauline et Margaux vous partage leur expérience de cette aventure extraordinaire. </br>
+					Vous aussi faites un geste pour l’association et nous vous remercierons comme il se doit !</div>
+				<div class="column-left">
+					<img class="photo1" src="assets/images/photo6.jpg" alt="Photo 1">
+					<img class="photo2" src="assets/images/photo2.jpg" alt="Photo 2">
+					<img class="photo3" src="assets/images/photo3.jpg" alt="Photo 3">
+				</div>
+				<div class="column-right">
+					<img class="photo4" src="assets/images/photo4.jpg" alt="Photo 4">
+					<img class="photo5" src="assets/images/photo5.jpg" alt="Photo 5">
+				</div>
+			</div>
 		</main>
 		<footer>
 			<div>
