--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<nav id="main-menu">
 				<ul>
 					<li><a href="index.html">Accueil</a></li>
-					<li><a href="#">L'association</a></li>
+					<li><a href="association.html">L'association</a></li>
 					<li><a href="#">Les donateurs</a></li>
 					<button class="btn-donate"><a href="#">Faites un don</a></button>
 				</ul>
@@ -32,7 +32,7 @@
 			<div id="close-mobile-menu">X</div>
 			<ul>
 				<li><a href="index.html">Accueil</a></li>
-				<li><a href="#">L'association</a></li>
+				<li><a href="association.html">L'association</a></li>
 				<li><a href="#">Les donateurs</a></li>
 				<button class="btn-donate"><a href="#">Faites un don</a></button>
 				</ul>
@@ -56,7 +56,7 @@
 		</main>
 		<footer>
 			<div>
-				<h3><a href="#">Mentions Légales</a></h3>
+				<h3><a href="mentionslegales.html">Mentions Légales</a></h3>
 			</div>
 		</footer>
 	</div>
