page dons done + true text mentionslegales

--- a/mentionslegales.html
+++ b/mentionslegales.html
@@ -42,15 +42,27 @@
 			<h1>Mentions légales</h1>
 			<div class="line"></div>
 			<p>
-				Ciliciam vero, quae Cydno amni exultat, Tarsus nobilitat, urbs perspicabilis hanc condidisse Perseus memoratur, Iovis filius et Danaes, vel certe ex Aethiopia profectus Sandan quidam nomine vir opulentus et nobilis et Anazarbus auctoris vocabulum referens, et Mopsuestia vatis illius domicilium Mopsi, quem a conmilitio Argonautarum cum aureo vellere direpto redirent, errore abstractum delatumque ad Africae litus mors repentina consumpsit, et ex eo cespite punico tecti manes eius heroici dolorum varietati medentur plerumque sospitales.
+				Que vous fassiez un don par SMS ou par le site, tout est reversé directement à l’association Enfants du désert.  Pourquoi alors passé par ce site ? Notre but est de communiquer autour de Pauline et Margaux afin qu’elles rapportent plus de dons que les autres équipes. Pour vous remercier et vous mettre en avant, il est nécessaire d’avoir accès à votre nom et au montant du don, ce qui explique la mise en place de cette plateforme.
 			</p>
 			<h2>HiPay Mobile</h2>
 			<div class="line"></div>
 			<p>
-				Ciliciam vero, quae Cydno amni exultat, Tarsus nobilitat, urbs perspicabilis hanc condidisse Perseus memoratur, Iovis filius et Danaes, vel certe ex Aethiopia profectus Sandan quidam nomine vir opulentus et nobilis et Anazarbus auctoris vocabulum referens, et Mopsuestia vatis illius domicilium Mopsi, quem a conmilitio Argonautarum cum aureo vellere direpto redirent, errore abstractum delatumque ad Africae litus mors repentina consumpsit, et ex eo cespite punico tecti manes eius heroici dolorum varietati medentur plerumque sospitales.
+				HIPAY MOBILE procède à la collecte et au traitement des données personnelles du WEBMASTER afin de permettre, à ce dernier, de souscrire au service, d'accéder à son compte HIPAY MOBILE et d'obtenir le versement des paiements collectés par HIPAY MOBILE en application des présentes. Ces données sont collectées pour la durée d’utilisation des services HIPAY MOBILE par le WEBMASTER et pour une durée de 5 ans au delà.
 			</p>
 			<p>
-				Ciliciam vero, quae Cydno amni exultat, Tarsus nobilitat, urbs perspicabilis hanc condidisse Perseus memoratur, Iovis filius et Danaes, vel certe ex Aethiopia profectus Sandan quidam nomine vir opulentus et nobilis et Anazarbus auctoris vocabulum referens, et Mopsuestia vatis illius domicilium Mopsi, quem a conmilitio Argonautarum cum aureo vellere direpto redirent, errore abstractum delatumque ad Africae litus mors repentina consumpsit, et ex eo cespite punico tecti manes eius heroici dolorum varietati medentur plerumque sospitales.
+				Conformément à la loi n° 78-17 du 6 janvier 1978, le WEBMASTER dispose d’un droit d’accès, de rectification et de retrait sur les données personnelles qu’il a communiquées à HIPAY MOBILE. HIPAY MOBILE déclare avoir soumis ces traitements à déclaration auprès de la CNIL (Commission Nationale de l’Informatique et des Libertés).
+			</p>
+			<p>
+				Pour les besoins de ses activités et services et notamment afin de faciliter leur bon fonctionnement, la plateforme de paiement HIPAY MOBILE utilise un système de cookies. Ces cookies pourront contenir des données relatives à l’identification et à la navigation des WEBMASTERS sur les sites et services HIPAY MOBILE. Conformément à la loi 78-17 du 6 janvier 1978 et à son article 32, il est précisé au WEBMASTER qu’il peut bloquer ou supprimer ces cookies.
+				</br>Note : Pour les besoins de certains services l’activation des cookies peut s’avérer nécessaire.
+			</p>
+			<p>
+				Le MARCHAND dispose d’un droit d’accès à ses données personnelles à travers son compte HIPAY MOBILE. Il peut également contacter HIPAY MOBILE par le biais de l’adresseprivacy@hipay.com.
+				</br>HIPAY MOBILE informe le MARCHAND qu’elle communiquera toutes données requises par une autorité judiciaire (ou administrative).
+			</p>
+			<p>
+				Le site HIPAY MOBILE, les services HIPAY MOBILE, la plateforme de paiement HIPAY MOBILE, ainsi que l’ensemble des contenus, textes, bases de données, graphiques, logiciels, applicatifs, scripts, API, éléments visuels et audiovisuels qui les composent sont la propriété exclusive de la société HIPAY MOBILE et sont protégés par le droit de la propriété intellectuelle. Toute reproduction est interdite sans l’accord préalable écrit d’HIPAY MOBILE.
+				</br>La marque HIPAY MOBILE, est une marque déposée appartenant à HIPAY MOBILE.
 			</p>
 		</main>
 		<footer>
