--- a/dons.html
+++ b/dons.html
@@ -45,8 +45,32 @@
 				<div id="bloc-choice">
 					<h4>Remplissez le formulaire pour faire un don par carte bancaire</h4>
 					<h4>OU</h4>
-					<button class="btn-donate"><a href="#">Faites un don par SMS</a></button>
+					<button class="btn-donate" onclick="location.href = ';">Faites un don par SMS</button>
 				</div>
+				<form action="#">
+					<input type="text" placeholder="Nom de l'entreprise ou association">
+					<label>Civilité* :</label>
+					<input type="radio" id="woman" name="gender" value="madame">
+					<label for="woman">Madame</label>
+					<input type="radio" ind="man" name="gender" value="monsieur">
+					<label for="man">Monsieur</label>
+					<div>
+						<input type="text" placeholder="Prénom">
+						<input type="text" placeholder="Nom">
+						<input type="text" placeholder="Date de naissance">
+						<input type="text" placeholder="Adresse">
+						<input type="text" placeholder="Code Postal">
+						<input type="text" placeholder="Ville">
+						<input type="text" placeholder="Pays">
+						<input type="text" placeholder="Mail">
+						<input type="number" placeholder="Téléphone">
+						<input type="text" placeholder="Montant €">
+					</div>
+					<p>
+					Dans les 2 mois suivant la réception de votre don, l'association vous fera parvenir un reçu fiscal. Si vous êtes imposable, il vous permettra de bénéficier d’une réduction d’impôt de 66% dans la limite de 20% de votre revenu imposable. Un don de 100€ ne vous coûte que 34€. 
+					</p>
+					<input type="submit" value="Valider">
+				</form>
 			</div>
 		</main>
 		<footer>
