Hover index.html + retouche responsive

--- a/index.html
+++ b/index.html
@@ -44,13 +44,58 @@
 				<div id="subtitle">Pauline et Margaux vous partage leur expérience de cette aventure extraordinaire. </br>
 					Vous aussi faites un geste pour l’association et nous vous remercierons comme il se doit !</div>
 				<div class="column-left">
-					<img class="photo1" src="assets/images/photo6.jpg" alt="Photo 1">
-					<img class="photo2" src="assets/images/photo2.jpg" alt="Photo 2">
-					<img class="photo3" src="assets/images/photo3.jpg" alt="Photo 3">
+					<div class="photo1" >
+						<a href="etape.html">
+							<div class="layout-hover"></div>
+							<div class="layout-text">
+								<h3>Etape 1</h3>
+								<span></span>
+								<div>Un grand merci à <span>Patrick</span>, plus grand donateurs de l’étape avec 20€ !</div>
+							</div>
+						</a>
+					</div>
+					<div class="photo2">
+						<a href="etape.html">
+							<div class="layout-hover"></div>
+							<div class="layout-text">
+								<h3>Etape 1</h3>
+								<span></span>
+								<div>Un grand merci à <span>Patrick</span>, plus grand donateurs de l’étape avec 20€ !</div>
+							</div>
+						</a>
+					</div>
+					<div class="photo3">
+						<a href="etape.html">
+							<div class="layout-hover"></div>
+							<div class="layout-text">
+								<h3>Etape 1</h3>
+								<span></span>
+								<div>Un grand merci à <span>Patrick</span>, plus grand donateurs de l’étape avec 20€ !</div>
+							</div>
+						</a>
+					</div>
 				</div>
 				<div class="column-right">
-					<img class="photo4" src="assets/images/photo4.jpg" alt="Photo 4">
-					<img class="photo5" src="assets/images/photo5.jpg" alt="Photo 5">
+					<div class="photo4">
+						<a href="etape.html">
+							<div class="layout-hover"></div>
+							<div class="layout-text">
+								<h3>Etape 1</h3>
+								<span></span>
+								<div>Un grand merci à <span>Patrick</span>, plus grand donateurs de l’étape avec 20€ !</div>
+							</div>
+						</a>
+					</div>
+					<div class="photo5">
+						<a href="etape.html">
+							<div class="layout-hover"></div>
+							<div class="layout-text">
+								<h3>Etape 1</h3>
+								<span></span>
+								<div>Un grand merci à <span>Patrick</span>, plus grand donateurs de l’étape avec 20€ !</div>
+							</div>
+						</a>
+					</div>
 				</div>
 			</div>
 		</main>
