ajout logo + MaJ hover index

--- a/association.html
+++ b/association.html
@@ -9,13 +9,17 @@
 <body>
 	<div id="container">
 		<header id="header-desktop">
-			<div class="logo">LOGO</div>
+			<a href="index.html">
+				<div class="logo">
+					<img src="assets/icons/logo.png" alt="logo MP GAZ'L">
+				</div>
+			</a>
 			<nav id="main-menu">
 				<ul>
 					<li><a href="index.html">Accueil</a></li>
 					<li><a href="#">L'association</a></li>
 					<li><a href="#">Les donateurs</a></li>
-					<button class="btn-donate"><a href="#">Faites un don</a></button>
+					<button class="btn-donate"><a href="dons.html">Faites un don</a></button>
 				</ul>
 			</nav>
 		</header>
@@ -25,7 +29,6 @@
 				<div></div>
 				<div></div>
 			</div>
-			<div class="logo">LOGO</div>
 			
 		</header>
 		<nav id="mobile-main-menu">
