--- a/dons.html
+++ b/dons.html
@@ -9,7 +9,11 @@
 <body>
 	<div id="container">
 		<header id="header-desktop">
-			<div class="logo">LOGO</div>
+			<a href="index.html">
+				<div class="logo">
+					<img src="assets/icons/logo.png" alt="logo MP GAZ'L">
+				</div>
+			</a>
 			<nav id="main-menu">
 				<ul>
 					<li><a href="index.html">Accueil</a></li>
@@ -25,7 +29,6 @@
 				<div></div>
 				<div></div>
 			</div>
-			<div class="logo">LOGO</div>
 			
 		</header>
 		<nav id="mobile-main-menu">
@@ -39,7 +42,7 @@
 		</nav>
 
 		<main id="dons" class="container">
-			<div id="title">Nous tenons à rappeler que la totlité des dons sont renversés à l'association Enfants du désert.</div>
+			<div id="title">Nous tenons à rappeler que la totalité des dons sont renversés à l'association Enfants du désert.</div>
 			<div id="subtitle">Si vous êtes ici, on a de grandes chances de pouvoir vous dire merci !</div>
 			<div id="choice">
 				<div id="bloc-choice">
