--- a/mentionslegales.html
+++ b/mentionslegales.html
@@ -9,7 +9,11 @@
 <body>
 	<div id="container">
 		<header id="header-desktop">
-			<div class="logo">LOGO</div>
+			<a href="index.html">
+				<div class="logo">
+					<img src="assets/icons/logo.png" alt="logo MP GAZ'L">
+				</div>
+			</a>
 			<nav id="main-menu">
 				<ul>
 					<li><a href="index.html">Accueil</a></li>
@@ -25,7 +29,6 @@
 				<div></div>
 				<div></div>
 			</div>
-			<div class="logo">LOGO</div>
 			
 		</header>
 		<nav id="mobile-main-menu">
@@ -34,7 +37,7 @@
 				<li><a href="index.html">Accueil</a></li>
 				<li><a href="association.html">L'association</a></li>
 				<li><a href="#">Les donateurs</a></li>
-				<button class="btn-donate"><a href="#">Faites un don</a></button>
+				<button class="btn-donate"><a href="dons.html">Faites un don</a></button>
 				</ul>
 		</nav>
 
