--- a/dons.html
+++ b/dons.html
@@ -17,9 +17,9 @@
 			<nav id="main-menu">
 				<ul>
 					<li><a href="index.html">Accueil</a></li>
-					<li><a href="#">L'association</a></li>
-					<li><a href="#">Les donateurs</a></li>
-					<button class="btn-donate"><a href="#">Faites un don</a></button>
+					<li><a href="association.html">L'association</a></li>
+					<li><a href="donateurs.html">Les donateurs</a></li>
+					<button class="btn-donate"><a href="dons.html">Faites un don</a></button>
 				</ul>
 			</nav>
 		</header>
@@ -35,9 +35,9 @@
 			<div id="close-mobile-menu">X</div>
 			<ul>
 				<li><a href="index.html">Accueil</a></li>
-				<li><a href="#">L'association</a></li>
-				<li><a href="#">Les donateurs</a></li>
-				<button class="btn-donate"><a href="#">Faites un don</a></button>
+				<li><a href="association.html">L'association</a></li>
+				<li><a href="donateurs.html">Les donateurs</a></li>
+				<button class="btn-donate"><a href="dons.html">Faites un don</a></button>
 				</ul>
 		</nav>
 
@@ -78,7 +78,7 @@
 		</main>
 		<footer>
 			<div>
-				<h3><a href="#">Mentions Légales</a></h3>
+				<h3><a href="mentionslegales.html">Mentions Légales</a></h3>
 			</div>
 		</footer>
 	</div>
