--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<ul>
 					<li><a href="index.html">Accueil</a></li>
 					<li><a href="association.html">L'association</a></li>
-					<li><a href="#">Les donateurs</a></li>
+					<li><a href="donateurs.html">Les donateurs</a></li>
 					<button class="btn-donate"><a href="dons.html">Faites un don</a></button>
 				</ul>
 			</nav>
@@ -36,8 +36,8 @@
 			<ul>
 				<li><a href="index.html">Accueil</a></li>
 				<li><a href="association.html">L'association</a></li>
-				<li><a href="#">Les donateurs</a></li>
-				<button class="btn-donate"><a href="#">Faites un don</a></button>
+				<li><a href="donateurs.html">Les donateurs</a></li>
+				<button class="btn-donate"><a href="dons.html">Faites un don</a></button>
 				</ul>
 		</nav>
 
