--- a/mentionslegales.html
+++ b/mentionslegales.html
@@ -18,8 +18,8 @@
 				<ul>
 					<li><a href="index.html">Accueil</a></li>
 					<li><a href="association.html">L'association</a></li>
-					<li><a href="#">Les donateurs</a></li>
-					<button class="btn-donate"><a href="#">Faites un don</a></button>
+					<li><a href="donateur.html">Les donateurs</a></li>
+					<button class="btn-donate"><a href="dons.html">Faites un don</a></button>
 				</ul>
 			</nav>
 		</header>
@@ -36,7 +36,7 @@
 			<ul>
 				<li><a href="index.html">Accueil</a></li>
 				<li><a href="association.html">L'association</a></li>
-				<li><a href="#">Les donateurs</a></li>
+				<li><a href="donateurs.html">Les donateurs</a></li>
 				<button class="btn-donate"><a href="dons.html">Faites un don</a></button>
 				</ul>
 		</nav>
