--- a/donateurs.html
+++ b/donateurs.html
@@ -14,8 +14,8 @@
 				<ul>
 					<li><a href="index.html">Accueil</a></li>
 					<li><a href="association.html">L'association</a></li>
-					<li><a href="#">Les donateurs</a></li>
-					<button class="btn-donate"><a href="#">Faites un don</a></button>
+					<li><a href="donateurs.html">Les donateurs</a></li>
+					<button class="btn-donate"><a href="dons.html">Faites un don</a></button>
 				</ul>
 			</nav>
 		</header>
@@ -33,8 +33,8 @@
 			<ul>
 				<li><a href="index.html">Accueil</a></li>
 				<li><a href="association.html">L'association</a></li>
-				<li><a href="#">Les donateurs</a></li>
-				<button class="btn-donate"><a href="#">Faites un don</a></button>
+				<li><a href="donateurs.html">Les donateurs</a></li>
+				<button class="btn-donate"><a href="dons.html">Faites un don</a></button>
 				</ul>
 		</nav>
 
