ajout logo donateurs.html + erreur href mentionsleg.html

--- a/donateurs.html
+++ b/donateurs.html
@@ -9,7 +9,11 @@
 <body>
 	<div id="container">
 		<header id="header-desktop">
-			<div class="logo">LOGO</div>
+			<a href="index.html">
+				<div class="logo">
+					<img src="assets/icons/logo.png" alt="logo MP GAZ'L">
+				</div>
+			</a>
 			<nav id="main-menu">
 				<ul>
 					<li><a href="index.html">Accueil</a></li>
@@ -25,7 +29,6 @@
 				<div></div>
 				<div></div>
 			</div>
-			<div class="logo">LOGO</div>
 			
 		</header>
 		<nav id="mobile-main-menu">
