--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
 		<nav id="mobile-main-menu">
 			<div id="close-mobile-menu">X</div>
 			<ul>
+				<button class="btn-donate"><a href="#">Faites un don</a></button>
 				<li><a href="index.html">Accueil</a></li>
 				<li><a href="association.html">L'association</a></li>
 				<li><a href="#">Les donateurs</a></li>
-				<button class="btn-donate"><a href="#">Faites un don</a></button>
-				</ul>
+			</ul>
+			<img src="" alt="logo">
 		</nav>
 
 		<main>
