--- a/etape.html
+++ b/etape.html
@@ -46,9 +46,8 @@
 				<article>
 					<div class="img-etape" style="background:url(assets/images/photo.jpg) no-repeat center"></div>
 					<h1>Un grand merci à Patrick</h1>
-					<p>Non ergo erunt homines deliciis diffluentes audiendi, si quando de amicitia, quam nec usu nec ratione habent cognitam, disputabunt. Nam quis est, pro deorum fidem atque hominum! qui velit, ut neque diligat quemquam nec ipse ab ullo diligatur, circumfluere omnibus copiis atque in omnium rerum abundantia vivere? Haec enim est tyrannorum vita nimirum, in qua nulla fides, nulla caritas, nulla stabilis benevolentiae potest esse fiducia, omnia semper suspecta atque sollicita, nullus locus amicitiae.
-
-	In his tractibus navigerum nusquam visitur flumen sed in locis plurimis aquae suapte natura calentes emergunt ad usus aptae multiplicium medelarum. verum has quoque regiones pari sorte Pompeius Iudaeis domitis et Hierosolymis captis in provinciae speciem delata iuris dictione formavit.
+					<p>
+						Le Raid 4L Trophy est une formidable aventure humaine, solidaire et sportive qui perdure depuis 18 ans. Chaque année, plus de 1000 Renault 4L se lancent sur un parcours d’environ 6000 km répartis en France, en Espagne et au Maroc pour apporter des fournitures scolaires et sportives destinées aux enfants les plus démunis du Maroc.
 					</p>
 					<nav class="etape-contributors">
 						<ul>
@@ -82,9 +81,7 @@
 				<article>
 					<div class="img-etape" style="background:url(assets/images/photo.jpg) no-repeat center"></div>
 					<h1>Un grand merci à Patrick</h1>
-					<p>Non ergo erunt homines deliciis diffluentes audiendi, si quando de amicitia, quam nec usu nec ratione habent cognitam, disputabunt. Nam quis est, pro deorum fidem atque hominum! qui velit, ut neque diligat quemquam nec ipse ab ullo diligatur, circumfluere omnibus copiis atque in omnium rerum abundantia vivere? Haec enim est tyrannorum vita nimirum, in qua nulla fides, nulla caritas, nulla stabilis benevolentiae potest esse fiducia, omnia semper suspecta atque sollicita, nullus locus amicitiae.
-
-	In his tractibus navigerum nusquam visitur flumen sed in locis plurimis aquae suapte natura calentes emergunt ad usus aptae multiplicium medelarum. verum has quoque regiones pari sorte Pompeius Iudaeis domitis et Hierosolymis captis in provinciae speciem delata iuris dictione formavit.
+					<p>Le Raid 4L Trophy est une formidable aventure humaine, solidaire et sportive qui perdure depuis 18 ans. Chaque année, plus de 1000 Renault 4L se lancent sur un parcours d’environ 6000 km répartis en France, en Espagne et au Maroc pour apporter des fournitures scolaires et sportives destinées aux enfants les plus démunis du Maroc.
 					</p>
 					<nav class="etape-contributors">
 						<ul>
@@ -108,7 +105,7 @@
 				</aside>
 				<div class="etape-next">
 					<div class="btn-etape-next">
-						<button class="scrollTo" href="#etape1"></button>
+						<button class="scrollTo" href="#etape3"></button>
 					</div>
 				</div>
 			</section>
