MaJ lien menu mobile + ajout logo menu mobile

--- a/etape.html
+++ b/etape.html
@@ -33,12 +33,12 @@
 		<nav id="mobile-main-menu">
 			<div id="close-mobile-menu">X</div>
 			<ul>
-				<button class="btn-donate"><a href="#">Faites un don</a></button>
+				<button class="btn-donate"><a href="dons.html">Faites un don</a></button>
 				<li><a href="index.html">Accueil</a></li>
 				<li><a href="association.html">L'association</a></li>
 				<li><a href="donateurs.html">Les donateurs</a></li>
 			</ul>
-			<img src="" alt="logo">
+			<img src="assets/icons/logo.png" alt="logo MP GAZ'L">
 		</nav>
 
 		<main id="etapes" class="container">
