--- a/etape.html
+++ b/etape.html
@@ -65,6 +65,9 @@
 					<div class="trait">
 						<img src="assets/icons/line.svg" alt="line">
 					</div>
+					<div class="cross">
+						<img src="assets/icons/cross.svg" alt="cross">
+					</div>
 				</aside>
 				<div class="etape-next">
 					<div class="btn-etape-next">
@@ -91,15 +94,32 @@
 						</ul>
 					</nav>
 				</article>
-				<aside>
-					<h2>Etape 2</h2>
-					<div class="trait">
-						<img src="assets/icons/line.svg" alt="line">
-					</div>
-				</aside>
 				<div class="etape-next">
 					<div class="btn-etape-next">
 						<button class="scrollTo" href="#etape3"></button>
+					</div>
+				</div>
+			</section>
+			<section id="etape2">
+				<article>
+					<div class="img-etape" style="background:url(assets/images/photo.jpg) no-repeat center"></div>
+					<h1>Un grand merci à Patrick</h1>
+					<p>Le Raid 4L Trophy est une formidable aventure humaine, solidaire et sportive qui perdure depuis 18 ans. Chaque année, plus de 1000 Renault 4L se lancent sur un parcours d’environ 6000 km répartis en France, en Espagne et au Maroc pour apporter des fournitures scolaires et sportives destinées aux enfants les plus démunis du Maroc.
+					</p>
+					<nav class="etape-contributors">
+						<ul>
+							<li>Michel</li>
+							<li>Jean</li>
+							<li>Jacques</li>
+							<li>Michel</li>
+							<li>Jean</li>
+							<li>Jacques</li>
+						</ul>
+					</nav>
+				</article>
+				<div class="etape-next">
+					<div class="btn-etape-next">
+						<button class="scrollTo" href="#etape4"></button>
 					</div>
 				</div>
 			</section>
