modify txt asso + lien dons

--- a/association.html
+++ b/association.html
@@ -47,17 +47,17 @@
 			 	<h1>La course</h1>
 			 	<div class="line"></div>
 			 	<p>
-					Ciliciam vero, quae Cydno amni exultat, Tarsus nobilitat, urbs perspicabilis hanc condidisse Perseus memoratur, Iovis filius et Danaes, vel certe ex Aethiopia profectus Sandan quidam nomine vir opulentus et nobilis et Anazarbus auctoris vocabulum referens, et Mopsuestia vatis illius domicilium Mopsi, quem a conmilitio Argonautarum cum aureo vellere direpto redirent, errore abstractum delatumque ad Africae litus mors repentina consumpsit, et ex eo cespite punico tecti manes eius heroici dolorum varietati medentur plerumque sospitales.
+					Dans le cadre de la course, Pauline et Margaux seront nos intermédiaires à l’intérieur de la course. C’est elle qui vont parcourir tout ses kilomètres dans le but d’apporter les fournitures aux élèves.
 				</p>
 			 	<h2>L'association "MP Gaz'L"</h2>
 			 	<div class="line"></div>
 			 	<p>
-					Ciliciam vero, quae Cydno amni exultat, Tarsus nobilitat, urbs perspicabilis hanc condidisse Perseus memoratur, Iovis filius et Danaes, vel certe ex Aethiopia profectus Sandan quidam nomine vir opulentus et nobilis et Anazarbus auctoris vocabulum referens, et Mopsuestia vatis illius domicilium Mopsi, quem a conmilitio Argonautarum cum aureo vellere direpto redirent, errore abstractum delatumque ad Africae litus mors repentina consumpsit, et ex eo cespite punico tecti manes eius heroici dolorum varietati medentur plerumque sospitales.
+					En nous sponsorisant, vous faites bénéficier des dizaines d’enfants d’un droit primordial : le droit au savoir et à l'apprentissage, qui leur permettra de s’épanouir et de s’ouvrir sur le monde. Chaque don nous rapproche un peu plus de l’aboutissement de ce raid et apportera une aide à des enfants qui en ont vraiment besoin.
 				</p>
 			 	<h2>L'association "Enfants du désert"</h2>
 			 	<div class="line"></div>
 			 	<p>
-					Ciliciam vero, quae Cydno amni exultat, Tarsus nobilitat, urbs perspicabilis hanc condidisse Perseus memoratur, Iovis filius et Danaes, vel certe ex Aethiopia profectus Sandan quidam nomine vir opulentus et nobilis et Anazarbus auctoris vocabulum referens, et Mopsuestia vatis illius domicilium Mopsi, quem a conmilitio Argonautarum cum aureo vellere direpto redirent, errore abstractum delatumque ad Africae litus mors repentina consumpsit, et ex eo cespite punico tecti manes eius heroici dolorum varietati medentur plerumque sospitales.
+					L’éducation est l’objectif phare de l’association, mais, conscient des corrélations entre la santé, les conditions de vie et l’éducation, l’association a élargi ses champs d’actions afin d’opter pour une démarche globale en faveur des enfants.
 				</p>
 			 </article>
 		</main>
