--- a/donateurs.html
+++ b/donateurs.html
@@ -47,6 +47,13 @@
 				<div id="subtitle">Nous remercions tout les participants pour leur geste et n’oubliez pas, il n’y a pas de petit don !</div>
 				<div id="choice-area">
 					<h2>Objectif du jour</h2>
+					<div id="progress">
+						<div id="bar-total">
+							<div id="bar-progress">
+							</div>
+						</div>
+						<h3>20€</h3>
+					</div>
 					<form action="#">
 						<div>
 							<select name="etape" id="etape">
@@ -62,14 +69,8 @@
 					           <option value="etape10">Etape 10</option>
 					       </select>
 						</div>
+						<input type="submit" value="Y accéder">
 					</form>
-					<div id="progress">
-						<div id="bar-total">
-							<div id="bar-progress">
-							</div>
-						</div>
-						<h3>20€</h3>
-					</div>
 				</div>
 				<table>
 					<thead>
