--- a/donateurs.html
+++ b/donateurs.html
@@ -69,7 +69,9 @@
 					           <option value="etape10">Etape 10</option>
 					       </select>
 						</div>
-						<input type="submit" value="Y accéder">
+						<div id="lien-etape">
+							<a href="etape.html">Y accéder</a>
+						</div>
 					</form>
 				</div>
 				<table>
