--- a/etape.html
+++ b/etape.html
@@ -44,6 +44,7 @@
 		<main id="etapes" class="container">
 			<section id="etape1">
 				<article>
+					<h2>Etape 1</h2>
 					<div class="img-etape" style="background:url(assets/images/photo.jpg) no-repeat center"></div>
 					<h1>Un grand merci à Patrick</h1>
 					<p>
@@ -76,9 +77,9 @@
 				</div>
 			</section>
 
-
 			<section id="etape2">
 				<article>
+					<h2>Etape 2</h2>
 					<div class="img-etape" style="background:url(assets/images/photo.jpg) no-repeat center"></div>
 					<h1>Un grand merci à Patrick</h1>
 					<p>Le Raid 4L Trophy est une formidable aventure humaine, solidaire et sportive qui perdure depuis 18 ans. Chaque année, plus de 1000 Renault 4L se lancent sur un parcours d’environ 6000 km répartis en France, en Espagne et au Maroc pour apporter des fournitures scolaires et sportives destinées aux enfants les plus démunis du Maroc.
@@ -100,8 +101,9 @@
 					</div>
 				</div>
 			</section>
-			<section id="etape2">
+			<section id="etape3">
 				<article>
+					<h2>Etape 3</h2>
 					<div class="img-etape" style="background:url(assets/images/photo.jpg) no-repeat center"></div>
 					<h1>Un grand merci à Patrick</h1>
 					<p>Le Raid 4L Trophy est une formidable aventure humaine, solidaire et sportive qui perdure depuis 18 ans. Chaque année, plus de 1000 Renault 4L se lancent sur un parcours d’environ 6000 km répartis en France, en Espagne et au Maroc pour apporter des fournitures scolaires et sportives destinées aux enfants les plus démunis du Maroc.
