Isolation JS etape.html + refonte wording

--- a/association.html
+++ b/association.html
@@ -44,20 +44,20 @@
 		<main id="association" class="container">
 			 <aside></aside>
 			 <article>
-			 	<h1>La course</h1>
+			 	<h1><a href="http://www.4ltrophy.com/" target="_blank">La course</a></h1>
 			 	<div class="line"></div>
 			 	<p>
-					Dans le cadre de la course, Pauline et Margaux seront nos intermédiaires à l’intérieur de la course. C’est elle qui vont parcourir tout ses kilomètres dans le but d’apporter les fournitures aux élèves.
+					Dans le cadre du 4L Trophy, un raid à la fois sportif et humanitaire, Pauline et Margaux seront nos intermédiaires sur le terrain. C’est elles qui vont parcourir tous ces kilomètres dans le but d’apporter des fournitures aux élèves.
 				</p>
 			 	<h2>L'association "MP Gaz'L"</h2>
 			 	<div class="line"></div>
 			 	<p>
-					En nous sponsorisant, vous faites bénéficier des dizaines d’enfants d’un droit primordial : le droit au savoir et à l'apprentissage, qui leur permettra de s’épanouir et de s’ouvrir sur le monde. Chaque don nous rapproche un peu plus de l’aboutissement de ce raid et apportera une aide à des enfants qui en ont vraiment besoin.
+					Margaux et Pauline ont créé leur association MP Gaz'L afin d'augmenter la visibilité de leur action, et de récolter des dons supplémentaires. Chaque centime sera reversé à l'association Enfants du Désert, et en offrant vos dons, vous faites bénéficier des dizaines d’enfants d’un droit primordial : le droit au savoir et à l'apprentissage, qui leur permettra de s’épanouir et de s’ouvrir sur le monde. Chaque don nous rapproche un peu plus de l’aboutissement de ce raid et apportera une aide à des enfants dans le besoin. Ensemble, nous pouvons aider encore plus !
 				</p>
-			 	<h2>L'association "Enfants du désert"</h2>
+			 	<h2><a href="http://enfantsdudesert.org/" target="_blank">L'association "Enfants du désert"</a></h2>
 			 	<div class="line"></div>
 			 	<p>
-					L’éducation est l’objectif phare de l’association, mais, conscient des corrélations entre la santé, les conditions de vie et l’éducation, l’association a élargi ses champs d’actions afin d’opter pour une démarche globale en faveur des enfants.
+					L’éducation est l’objectif phare de l’association, mais, conscient des corrélations entre la santé, les conditions de vie et l’éducation, l’association a élargi ses champs d’action afin d’opter pour une démarche globale en faveur des enfants sud-marocains. Apporter des fournitures n'est qu'une étape, réussir à construire des écoles puis à entièrement les équiper en est une autre ! Mais tout cela n'est possible qu'avec la solidarité de tous.
 				</p>
 			 </article>
 		</main>
