--- a/donateurs.html
+++ b/donateurs.html
@@ -43,8 +43,8 @@
 
 		<main id="donateurs" class="container">
 			<div class="container">
-				<div id="title">Après chaque étape, le donateur le plus généreux sera remercier et mis en avant pendant la course. </div>
-				<div id="subtitle">Nous remercions tout les participants pour leur geste et n’oubliez pas, il n’y a pas de petit don !</div>
+				<div id="title">Après chaque étape, le donateur le plus généreux sera remercié et mis en avant pendant la course, directement par Pauline et Margaux ! Une nouvelle photo sera prise chaque soir au bivouac par nos deux pilotes d'exception. </div>
+				<div id="subtitle">L'important dans cette aventure humaine n'étant pas de gagner mais de participer, nous remercions tous les participants pour leur geste. Et n’oubliez pas, il n’y a pas de petit don ! :)</div>
 				<div id="choice-area">
 					<h2>Objectif du jour</h2>
 					<div id="progress">
