--- a/dons.html
+++ b/dons.html
@@ -42,7 +42,8 @@
 		</nav>
 
 		<main id="dons" class="container">
-			<div id="title">Nous tenons à rappeler que la totalité des dons sont renversés à l'association Enfants du désert.</div>
+			<div id="title">Nous tenons à rappeler que la totalité des dons sont renversés à l'association Enfants du Désert.<br/>
+			MP Gaz'L a été créée dans un seul but : réussir à aider encore plus que ne le fait déjà ce raid humanitaire qu'est le 4L Trophy !</div>
 			<div id="subtitle">Si vous êtes ici, on a de grandes chances de pouvoir vous dire merci !</div>
 			<div id="choice">
 				<div id="bloc-choice">
