--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
 
 		<main>
 			<div class="container">
-				<div id="title">Après chaque étape, le donateur le plus généreux sera remercier et mis en avant pendant la course. </div>
-				<div id="subtitle">Pauline et Margaux vous partage leur expérience de cette aventure extraordinaire. </br>
-					Vous aussi faites un geste pour l’association et nous vous remercierons comme il se doit !</div>
+				<div id="title">L'équipage MP Gaz'L s'engage auprès de l'association Enfants du Désert !<br/>
+					A la fin de chaque étape, le donateur le plus généreux sera remercié et mis en avant pendant la course par nos deux pilotes. </div>
+				<div id="subtitle">Pauline et Margaux vous partagent leur expérience de cette aventure extraordinaire. </br>
+					Vous aussi, faites un geste pour l’association et nous vous remercierons comme il se doit !</div>
 				<div class="column-left">
 					<div class="photo1" >
 						<a href="etape.html">
