--- a/etape.html
+++ b/etape.html
@@ -46,18 +46,34 @@
 				<article>
 					<h2>Etape 1</h2>
 					<div class="img-etape" style="background:url(assets/images/photo.jpg) no-repeat center"></div>
-					<h1>Un grand merci à Patrick</h1>
+					<h1>Un grand merci à Yann, l'homme au grand coeur de cette première étape !</h1>
 					<p>
-						Le Raid 4L Trophy est une formidable aventure humaine, solidaire et sportive qui perdure depuis 18 ans. Chaque année, plus de 1000 Renault 4L se lancent sur un parcours d’environ 6000 km répartis en France, en Espagne et au Maroc pour apporter des fournitures scolaires et sportives destinées aux enfants les plus démunis du Maroc.
+						Cette première étape de notre périple en 4L fut une véritable réussite ! Grâce à votre générosité, nous sommes parvenues à récolter 234€ en une seule journée. Nous avons doublé notre objectif initial, nous n'en revenons toujours pas !!
+						Côté mécanique, pas de souci à déclarer pour le moment, même si nous n'avons toujours pas affronté les rigueurs du désert marocain !<br/>En tout cas nous espérons de tout coeur que vous serez toujours aussi nombreux et motivés pour notre étape de demain !
+						Objectif de 150€ cette foi-ci, essayons encore de doubler ça !<br/>
+						Encore merci à Yann qui remporte la première étape haut la main, on t'embrasse !<br/>
+						Et voici nos généreux donnateurs du jour :
 					</p>
 					<nav class="etape-contributors">
 						<ul>
 							<li>Michel</li>
 							<li>Jean</li>
 							<li>Jacques</li>
-							<li>Michel</li>
-							<li>Jean</li>
+							<li>Liliane</li>
+							<li>Marguerite</li>
+							<li>Yann</li>
+							<li>Stan</li>
+							<li>Magali</li>
+							<li>Edwin</li>
+							<li>Josianne</li>
+							<li>Pauline</li>
+							<li>Anthony</li>
+							<li>Lucas</li>
 							<li>Jacques</li>
+							<li>Roger</li>
+							<li>Mathias</li>
+							<li>Lise</li>
+							<li>Charlotte</li>
 						</ul>
 					</nav>
 				</article>
@@ -134,5 +150,5 @@
 	</div>
 </body>
 <script src="jquery-2.2.0.min.js" type="text/javascript"></script>
-<script src="script.js" type="text/javascript"></script>
+<script src="etape.js" type="text/javascript"></script>
 </html>
